2001-08-12  Ulrich Drepper  <drepper@redhat.com>

	* charmaps/ISO-IR-209: New file.
	* charmaps/MAC-SAMI: New file.
	Contributed by Regnor Jernsletten <Regnor.Jernsletten@eunet.no>.

2001-08-04  Ulrich Drepper  <drepper@redhat.com>

	* charmaps/GEORGIAN-PS: New file.
	* charmaps/GEORGIAN-ACADEMY: New file.
	* SUPPORTED: Add ka_GE/GEORGIAN-PS.

2001-08-03  Ulrich Drepper  <drepper@redhat.com>

	* Makefile: Add rules to build and run tst-mbswcs6.
	* tst-mbswcs6.c: New file.

	* SUPPORTED: Add several new locales.

	* charmaps/KOI8-T: New file.

2001-08-02  Ulrich Drepper  <drepper@redhat.com>

	* locales/af_ZA: Use generic LC_COLLATE data.
	* locales/el_GR: Likewise.
	* locales/hu_HU: Likewise.
	* locales/ro_RO: Likewise.  Add transliteration.
	* locales/be_BY: Likewise.  Handle Ukrainian Ghe.
	* locales/ru_RU: Likewise.
	* locales/ru_UA: Likewise.
	* locales/uk_UA: Likewise.
	* locales/eu_ES: LC_TIME strings fixed.
	* locales/am_ET: New file.
	* locales/translit_et: New file.
	* locales/az_AZ: New file.
	* locales/br_FR: New file.
	* locales/bs_BA: New file.
	* locales/cy_GB: New file.
	* locales/hy_AM: New file.
	* locales/ka_GE: New file.
	* locales/mi_NZ: New file.
	* locales/oc_FR: New file.
	* locales/tg_TJ: New file.
	* locales/ti_ER: New file.
	* locales/ti_ET: New file.
	* locales/tl_PH: New file.
	* locales/tt_RU: New file.
	* locales/ur_PK: New file.
	* locales/uz_UZ: New file.
	* locales/yi_US: New file.
	Patches by Pablo Saratxaga <pablo@mandrakesoft.com>.

2001-07-31  Ulrich Drepper  <drepper@redhat.com>

	* locales/tr_TR: Define missing fields and remove FIXME comments.
	Patch by Nilg~n Belma Bug~ner <nilgun@fide.org>.

2001-07-19  Jakub Jelinek  <jakub@redhat.com>

	* locales/en_CA (LC_PAPER): Change to Letter.
	* locales/fr_CA (LC_PAPER): Likewise.
	* locales/es_PR (LC_PAPER): Change to Letter.
	(LC_MEASUREMENT): Change to 2.
	* locales/es_US (LC_PAPER): Change to Letter.
	(LC_MEASUREMENT): Change to 2.
